# Tree-Drawing-Demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  make_tree.sh  report.tex  report.toc
report/: report.aux  report.tex  tree_2.pdf_tex
src/: main.cpp  nary_tree.cpp  nary_tree.h  paper.cpp  runtimeTest.cpp  tree.cpp  tree.h  tree_draw.cpp  tree_draw.h
tests/: tree_drawing_tests.cpp  tree_tests.cpp
